@@ -12,6 +12,9 @@
 	  description field, go to the view field instead. From Andre
 	  Srinivasan.
 
+	* (p4-empty-diff-p): Optimized so that it doesn't produce so much
+	   p4 server load.
+
 2002-07-25  Peter Osterlund  <petero2@telia.com>
 
 	* (p4-menu-def): Reordered code blocks to make xemacs work
